--- a/Assessment-2/Evil Within/characters.html
+++ b/Assessment-2/Evil Within/characters.html
@@ -41,22 +41,28 @@
 
   <main>
     <section class="intro">
-      <h2>Brief intro to all the characters</h2>
-      <p>Descriptions:
+  
 
-Sebastian Castellanos
-A veteran detective struggling with personal tragedy. Determined, skeptical, and emotionally closed off, Sebastian becomes the unwilling hero thrown into a surreal nightmare.
-
-Ruvik (Rubén Victoriano)
-A brilliant but tormented mind behind the STEM project. After suffering horrific abuse and loss, he turns into the architect of the twisted world Sebastian must survive. His motivations blur the line between vengeance and madness.
-
-Juli Kidman
-Mysterious and secretive, Kidman is a junior detective with ties to the shadowy organization Mobius. Her presence raises more questions than answers, and her true mission is slowly revealed as the story progresses.
-
-Joseph Oda
-Loyal to Sebastian, Joseph is his partner and closest ally. Calm and rational, he provides moral and tactical support, though even he begins to succumb to the horrors of the STEM world.</p>
-      <img src="evil-within-bg.jpg" alt="The Evil Within Cover" width="500">
-    </section>
+    
+	<div class="image-stack">
+	<h2>Sebastian Castellanos</h2>
+	<img src="seb.jpg" alt="The Evil Within Cover" width="500">
+	<p>A veteran detective struggling with personal tragedy. Determined, skeptical, and emotionally closed off, Sebastian becomes the unwilling hero thrown into a surreal nightmare.</p>
+    <h2>Juli Kidman</h2>
+	<img src="kidman.jpg" alt="The Evil Within Cover" width="500">
+	<p>Mysterious and secretive, Kidman is a junior detective with ties to the shadowy organization Mobius. Her presence raises more questions than answers, and her true mission is slowly revealed as the story progresses.</p>
+	<h2>Joseph Oda</h2>
+	<img src="oda.jpg" alt="The Evil Within Cover" width="500">
+	<p>Loyal to Sebastian, Joseph is his partner and closest ally. Calm and rational, he provides moral and tactical support, though even he begins to succumb to the horrors of the STEM world.</p>
+	<h2>Ruvik (Rubén Victoriano)</h2>
+	<img src="ruvik.jpg" alt="The Evil Within Cover" width="500">
+	<p>A brilliant but tormented mind behind the STEM project. After suffering horrific abuse and loss, he turns into the architect of the twisted world Sebastian must survive. His motivations blur the line between vengeance and madness.</p>
+	<h2>Leslie</h2>
+	<img src="leslie.jpg" alt="The Evil Within Cover" width="500">
+	<p>Leslie Withers is a quiet and mentally unstable young man who plays a crucial role in The Evil Within. He is one of the few individuals whose mind is compatible with the STEM system, making him essential to Ruvik’s plan to escape into the real world. Despite his fragile state, Leslie instinctively tries to flee danger and often appears lost or frightened, adding to the mystery surrounding his importance.</p>
+	</div>
+	
+	</section>
   </main>
 
   <footer>
