--- a/Assessment-2/Evil Within/gallery.html
+++ b/Assessment-2/Evil Within/gallery.html
@@ -41,10 +41,11 @@
   <main>
     <section>
       <h2>Gallery</h2>
-      <div class="gallery">
-        <img src="screenshot1.jpg" alt="Screenshot 1" width="300">
-        <img src="screenshot2.jpg" alt="Screenshot 2" width="300">
-        <img src="screenshot3.jpg" alt="Screenshot 3" width="300">
+      <div class="image-stack">
+        <img src="12.jpg" alt="Screenshot 1" width="300">
+        <img src="13.jpg" alt="Screenshot 2" width="300">
+        <img src="14.jpg" alt="Screenshot 3" width="300">
+		<img src="15.jpg" alt="Screenshot 3" width="300">
       </div>
     </section>
   </main>
