--- a/Assessment-2/Evil Within/gameplay.html
+++ b/Assessment-2/Evil Within/gameplay.html
@@ -56,7 +56,8 @@ As the game progresses, the world becomes more twisted. Hallways stretch endless
 In addition to its gameplay mechanics, The Evil Within also introduces safe rooms — brief moments of reprieve where players can save progress and reflect on journal entries, offering deeper insights into the story and characters.
 
 Whether you're sneaking past enemies in a burning hospital, solving twisted puzzles in a haunted mansion, or fleeing a giant blood-soaked monster in the sewer, every moment in The Evil Within is designed to terrify and captivate.</p>
-    </section>
+    <img src="gmply.webp" alt="The Evil Within Cover" width="500">
+	</section>
   </main>
   <footer>
     <p>&copy; 2025 Fan Site for The Evil Within</p>
